[tool.poetry]
name = "pathfinding"
version = "0.1.0"
description = "AI Algorithms for path finding problem."
authors = ["Giorgio Zoppi <giorgio.zoppi@yenflow.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.3.4"
flake8 = "^7.0.0"
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"